--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: ^8.0.0
   http: ^1.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
