--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   connectivity_plus: ^4.0.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_secure_storage: ^8.0.0
