--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,6 +2,6 @@ include: package:flutter_lints/flutter.yaml
 linter:
   rules:
     prefer_relative_imports: true
-    sort_constructors_first: true
+    # sort_constructors_first: true
     sort_unnamed_constructors_first: true
     prefer_single_quotes: true
