--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "editor.codeActionsOnSave": {
         "source.fixAll": true,
         "source.organizeImports": true,
+    },
+    "editor.fontLifatures": false,
+    "command-runner.commands": {
+        "pub get": "flutter pub get",
+        "build_runner": "flutter pub run build_runner build"
     }
 }
