video 298: Freezed - parte 7. se cambia Either para que trabaje con freezed

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 *.g.dart
+*.freezed.dart
 
 
 # See https://www.dartlang.org/guides/libraries/private-files
