--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,11 @@
 include: package:flutter_lints/flutter.yaml
+
+analyzer:
+  exclude:
+    - '**/*.freezed.dart'
+    - '**/*.g.dart'
+  errors:
+    invalid_annotation_target: ignore
 linter:
   rules:
     prefer_relative_imports: true
