--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_secure_storage: ^8.0.0
+  freezed_annotation: ^2.4.1
   http: ^1.1.0
   json_annotation: ^4.8.1
   provider: ^6.0.5
@@ -22,6 +23,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
+  freezed: ^2.4.2
 
 flutter:
   uses-material-design: true
