--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   connectivity_plus: ^4.0.2
   equatable: ^2.0.5
+  extended_image: ^8.0.2
   flutter:
     sdk: flutter
   flutter_secure_storage: ^8.0.0
