Video: 318 flutter_gen - parte 2 recodar que crea assets y yo lo instalé de forma global. Ademas ahora el refresh indicator

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ app.*.map.json
 /android/app/release
 *.g.dart
 *.freezed.dart
+lib/app/generated/
 
 
 # See https://www.dartlang.org/guides/libraries/private-files
