--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "command-runner.commands": {
         "pub get": "flutter pub get",
         "build_runner": "flutter pub run build_runner build",
-        "build_runner_delete_conflicting": "flutter pub run build_runner build  --delete-conflicting-outputs"
+        "build_runner_delete_conflicting": "flutter pub run build_runner build  --delete-conflicting-outputs",
+        "fluttergen global": "flutter -c pubspec.yaml"
     }
 }
