--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_secure_storage: ^8.0.0
+  flutter_svg: ^2.0.7
   freezed_annotation: ^2.4.1
   http: ^1.1.0
   json_annotation: ^4.8.1
@@ -23,8 +24,17 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
+  # flutter_gen_runner: ^5.3.1
   json_serializable: ^6.7.1
   freezed: ^2.4.2
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/svgs/
+
+flutter_gen:
+  output: lib/app/generated/ # Optional (default: lib/gen/)
+  integrations:
+    flutter_svg: true
