--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^1.1.0
   json_annotation: ^4.8.1
   provider: ^6.0.5
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
