Video: 360 Shared Preferences - parte 2
luego internacionalización

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,11 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   flutter_svg: ^2.0.7
   freezed_annotation: ^2.4.1
+  google_fonts: ^5.1.0
   http: ^1.1.0
   json_annotation: ^4.8.1
   provider: ^6.0.5
+  shared_preferences: ^2.2.0
   url_strategy: ^0.2.0
 
 dev_dependencies:
