--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,19 @@ dependencies:
   extended_image: ^8.0.2
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_secure_storage: ^8.0.0
   flutter_svg: ^2.0.7
   freezed_annotation: ^2.4.1
   google_fonts: ^5.1.0
   http: ^1.1.0
+  intl: ^0.18.0
   json_annotation: ^4.8.1
   provider: ^6.0.5
   shared_preferences: ^2.2.0
+  slang: ^3.23.0
+  slang_flutter: ^3.23.0
   url_strategy: ^0.2.0
 
 dev_dependencies:
@@ -30,6 +35,7 @@ dev_dependencies:
   # flutter_gen_runner: ^5.3.1
   json_serializable: ^6.7.1
   freezed: ^2.4.2
+  slang_build_runner: ^3.23.0
 
 flutter:
   uses-material-design: true
